--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,5 @@
   command = "npm run build"
   publish = "dist"
 
-[context.production.environment]
-  NODE_VERSION = "16"
+[build.environment]
+  NODE_VERSION = "18.18.0"
